--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -5,3 +5,7 @@ ion-content{
 // ion-content{
 //     --background: #fff url('../assets/background-image/body-background.png') no-repeat center center / cover;
 // }
+
+.form{
+   
+}
